--- a/crm-frontend/src/pages/LandingPage/landingPage.style.css
+++ b/crm-frontend/src/pages/LandingPage/landingPage.style.css
@@ -4,7 +4,8 @@
 }
 
 .landing-page {
-    height: 370px;
+    height: auto;
+    max-height: 500px;
     width: 450px;
     flex-direction: column;
     margin:auto;
