--- a/crm-frontend/src/components/message-history/message-history.style.css
+++ b/crm-frontend/src/components/message-history/message-history.style.css
@@ -16,3 +16,9 @@
     border:1px solid #ced4da;
     border-radius:0.25rem;
 }
+
+.disabled{
+pointer-events: none;
+background-color: #e9ecef;
+opacity: 1;
+}
