--- a/crm-frontend/src/pages/password-reset/passwordOtpForm.style.css
+++ b/crm-frontend/src/pages/password-reset/passwordOtpForm.style.css
@@ -1,10 +1,38 @@
-.entry-page {
-	min-height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.form-box {
-	box-shadow: 0px 0px 15px -5px black;
-}
+.root{
+	display:flex;
+	flex-direction:column;
+   }
+   
+   .landing-page {
+	   height: auto;
+	   max-height: 900px;
+	   width: 450px;
+	   flex-direction: column;
+	   margin:auto;
+   }
+   
+   .login-form-div {
+	   height: 90vh;
+	   display: flex;
+	   justify-content: center;
+	   font-family:sans-serif;
+	   background-color: #107DAC;
+	  flex-direction: column;
+   }
+   .form-box {
+	box-shadow: 0px 0px 15px -5px black ;
+   }
+   
+   .dashboard-header {
+	   background-color: #005073;
+	   height: 10vh;
+   }
+   
+   .dashboard-content  {
+	   color: #f4f4f4;
+	   font-size: 4.5vh;
+	   stroke: #cccccc;
+	   display: flex;
+	   font-family: sans-serif;
+	   margin: 15px 5px 0px 0px;
+   }
