fixed company workflow

--- a/crm-frontend/src/components/Layout/Partials/Header.style.css
+++ b/crm-frontend/src/components/Layout/Partials/Header.style.css
@@ -18,7 +18,8 @@
     stroke: #cccccc;
     display: flex;
     font-family: sans-serif;
-    margin-left:auto
+    margin-left:auto;
+    flex-direction:end;
 }
 
 .dashboard-content-link{
