--- a/crm-frontend/src/pages/password-reset/passwordOtpForm.style.css
+++ b/crm-frontend/src/pages/password-reset/passwordOtpForm.style.css
@@ -28,11 +28,12 @@
 	   height: 10vh;
    }
    
-   .dashboard-content  {
+   .dashboard-content-1  {
 	   color: #f4f4f4;
 	   font-size: 4.5vh;
 	   stroke: #cccccc;
 	   display: flex;
 	   font-family: sans-serif;
 	   margin: 15px 5px 0px 0px;
+	   flex-direction: end;
    }
