TCP-135-create-button-for-the-delete-in-ticket-page

--- a/crm-frontend/src/pages/update-ticket/update-ticket.css
+++ b/crm-frontend/src/pages/update-ticket/update-ticket.css
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.save-row-content{
+    justify-content: space-between;
+    width: 20%;
+    display: flex;
+}
